[package]
name = "santoso"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_derive = "1.0.219"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
pwhash = "1"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
